Re-order headers and fix mobile font alignment

--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -4,8 +4,9 @@ $secondary-color: #03dac6;
 $header-color: #fff;
 $text-color: #fff;
 $link-color: lighten($secondary-color, 25%);
-$box-shadow-small: 0 2px 6px 0 rgb(0 0 0 / 25%);
-$box-shadow-large: 0 6px 12px 0 rgb(0 0 0 / 22%);
+$box-shadow-xsmall: 0px 0px 5px 0 rgb(0 0 0 / 20%);
+$box-shadow-small: 0 2px 6px 0 rgb(0 0 0 / 40%);
+$box-shadow-large: 0 6px 12px 0 rgb(0 0 0 / 40%);
 
 /*** Font ***/
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
